2012-02-21  Paul A. Rombouts  <p.a.rombouts@home.nl>

	* src/dns_query.c
	If we have used EDNS in a query and the remote server answered
	with rcode "format error", try again with the OPT pseudo-record
	removed from the additional section of the query.

	Also fixed a bug in p_exec_query() that caused pdnsd to behave
	as if every reply with a non-empty additional section contained
	an OPT record.

2012-02-15  Paul A. Rombouts  <p.a.rombouts@home.nl>

	* src/dns_answer.c,src/helpers.c,src/helpers.h,src/icmp.c,
	  src/ipvers.h,src/main.c,src/netdev.c
	Introduced a new macro SEL_IPVER() to reduce some of the clutter in the
	code caused by having to support both IPv4 and IPv6.

2012-01-31  Paul A. Rombouts  <p.a.rombouts@home.nl>

	* configure.in
	Add AM_PROG_CC_C_O line to configure.in to prevent automake warning.

2012-01-29  Paul A. Rombouts  <p.a.rombouts@home.nl>

	* src/cache.c
	In report_cache_stat(), add the average number of bytes used per cache
	entry when reporting the cache status, as suggested by M. Galabant.

2012-01-28  Paul A. Rombouts  <p.a.rombouts@home.nl>

	* src/dns_answer.c,src/dns_query.c
	Cleaned up the code a bit to avoid warning messages when
	compiling with '-Wall -Winline' flags.

2012-01-18  Paul A. Rombouts  <p.a.rombouts@home.nl>

	* src/conff.c
	Set the default of the edns_query option to false.

2011-07-31  Paul Rombouts  <p.a.rombouts@home.nl>

	* src/cache.c
	Use a slightly more sophisticated merge-sort algorithm in sort_rrl().

2011-05-09  Paul Rombouts  <p.a.rombouts@home.nl>

	* src/dns_answer.c
	In compose_answer(), also add an OPT pseudo-RR to the additional section
	of a NXDOMAIN reply when appropriate.

2011-05-08  Paul Rombouts  <p.a.rombouts@home.nl>

	* src/cache.c,src/cache.h,src/dns_query.c,src/status.c
	Make the dns_cent_t struct more compact by putting the fields that are
	only used for either non-existent or existent domains, but not both,
	into a union so that these fields can share memory.